# pieces-auto

./: .env.example  .gitignore  CLAUDE.md  HOW_IT_WORKS.md  README.md  REVIEW.md  ResearchApproach.md  claude_md_pieces_auto_tn.md  main.py  pyproject.toml
data/: cdg_report.html  cdg_stock_results.json  db_inventory.csv  db_inventory.md  db_pivot.csv  db_pivot.md  db_report.md  project_guide.html
data/vin_tables/: citroen.json  dacia.json  fiat.json  ford.json  hyundai.json  kia.json  peugeot.json  renault.json  seat.json  skoda.json  toyota.json  volkswagen.json  wmi_codes.json  year_codes.json
docs/: ui_display_contract.md
scripts/: cdg_stock_check.py  db_inventory.py  db_pivot.py  db_report.py  generate_cdg_report.py  generate_project_guide.py  rebuild_vin_tables.py
src/: __main__.py  chain.py  main.py  part_aliases.py
src/db/: models.py  repository.py  schema.sql  seed.py
src/interpreter/: llm.py  prompts.py
src/scraper/: catalog_cache.py  cdg.py  pa24.py
src/telegram/: ai_functions.py  ai_layer.py  client_bot.py  handlers.py  operator_bot.py  ui.py
src/vin/: decoder.py  tables.py
supabase/: config.toml
